force-app/main/default/objects/GL_Transaction_Snapshot__c/GL_Transaction_Snapshot__c.object-meta.xml
<CustomObject>
    <label>GL Transaction Snapshot</label>
    <nameField>
        <displayFormat>GTS-{00000000}</displayFormat>
        <label>GL Transaction Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Transaction Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>