force-app/main/default/objects/GL_Transaction_Snapshot__c/fields/Accounting_Code_Combination__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Code_Combination__c</fullName>
    <label>Accounting Code Combination</label>
    <type>TextArea</type>
</CustomField>