force-app/main/default/objects/GL_Transaction_Snapshot__c/fields/C_D__c.field-meta.xml
<CustomField>
    <fullName>C_D__c</fullName>
    <label>C/D</label>
    <length>1</length>
    <type>Text</type>
</CustomField>