force-app/main/default/objects/GL_Transaction_Snapshot__c/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account</label>
    <referenceTo>cllease__GL_Account__c</referenceTo>
    <relationshipLabel>GL Transaction Snapshot</relationshipLabel>
    <relationshipName>GL_Transaction_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>