force-app/main/default/objects/GL_Transaction_Snapshot__c/fields/GL_Batch_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Batch_Post_Date__c</fullName>
    <label>GL Batch Post Date</label>
    <type>Date</type>
</CustomField>