force-app/main/default/objects/GL_Transaction_Snapshot__c/fields/Lending_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Lending_Account_ID__c</fullName>
    <label>Lending Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>