force-app/main/default/objects/GL_Transaction_Snapshot__c/fields/Report_Amount__c.field-meta.xml
<CustomField>
    <fullName>Report_Amount__c</fullName>
    <formula>IF(C_D__c = &quot;C&quot;,0-Amount__c,Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>