force-app/main/default/objects/GL_Transaction_Snapshot__c/fields/Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Date__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Run Date</label>
    <type>Date</type>
</CustomField>