force-app/main/default/objects/GL_Transaction_Snapshot__c/fields/Transaction_Description__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Description__c</fullName>
    <label>Transaction Description</label>
    <type>TextArea</type>
</CustomField>