force-app/main/default/objects/GL_Transaction_Snapshot__c/fields/Transaction_Details_Name__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Details_Name__c</fullName>
    <label>Transaction Details Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>