force-app/main/default/objects/GL_Transaction_Snapshot__c/fields/Transaction_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Sub_Type__c</fullName>
    <label>Transaction Sub Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>