force-app/main/default/objects/GL_Transaction_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lending_Account_ID__c</columns>
    <columns>Accounting_Code_Combination__c</columns>
    <columns>C_D__c</columns>
    <columns>Exported_Date__c</columns>
    <columns>GL_Account__c</columns>
    <columns>GL_Batch_Post_Date__c</columns>
    <columns>GL_Date__c</columns>
    <columns>Report_Amount__c</columns>
    <columns>Run_Date__c</columns>
    <columns>Transaction_Description__c</columns>
    <columns>Transaction_Details_Name__c</columns>
    <columns>Transaction_Sub_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>